Experimental funnel chart updated to work with Highcharts 2.0.1 core.

--- a/studies/funnel.htm
+++ b/studies/funnel.htm
@@ -7,8 +7,8 @@
 		
 		<!-- 1. Add these JavaScript inclusions in the head of your page -->
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-		<script type="text/javascript" src="../js/prerelease/highcharts.1.3.src.js"></script>
-		<script type="text/javascript" src="../js/modules/funnel.js"></script>
+		<script type="text/javascript" src="../js/highcharts.src.js"></script>
+		<script type="text/javascript" src="../js/modules/funnel.src.js"></script>
 		<script type="text/javascript" src="../js/modules/exporting.js"></script>
 		<!--[if IE]>
 			<script type="text/javascript" src="../js/excanvas.compiled.js"></script>
@@ -27,7 +27,7 @@
 					borderWidth: 1
 				},
 				title: {
-					text: 'Browser market shares at a specific website, 2008'
+					text: 'Sales funnel'
 				},
 				plotArea: {
 					shadow: null,
