Minor changes to resizing

--- a/studies/resize.htm
+++ b/studies/resize.htm
@@ -18,9 +18,10 @@
             chart = new Highcharts.Chart({
                 chart: {
                     renderTo: 'container',
-					defaultSeriesType: 'spline',
+					defaultSeriesType: 'bar',
 					borderWidth: 1,
-					plotBorderWidth: 1
+					plotBorderWidth: 1,
+					inverted: true
                 },
 				
 				xAxis: {
