--- a/studies/resize.htm
+++ b/studies/resize.htm
@@ -53,14 +53,14 @@
 					opposite: true
 				}],
 				
-                series: [{
+                series: [/*{
                     data: getRandomData(),
 					type: 'column',
 					yAxis: 1
                 }, {
                     data: getRandomData(),
 					type: 'spline'
-                }, {
+                }, */{
                     data: getRandomData()
                 }]
             });
