--- a/studies/resize.htm
+++ b/studies/resize.htm
@@ -46,7 +46,9 @@
 				xAxis: {
 					title: {
 						text: 'X axis'
-					}
+					},
+					minPadding: 0,
+					maxPadding: 0
 				},
 				
 				yAxis: [{
