Started creating Tick prototype

--- a/studies/resize.htm
+++ b/studies/resize.htm
@@ -26,7 +26,7 @@
             chart = new Highcharts.Chart({
                 chart: {
                     renderTo: 'container',
-					defaultSeriesType: 'line',
+					defaultSeriesType: 'pie',
 					borderWidth: 1,
 					backgroundColor: '#FFFFEF',
 					plotBorderWidth: 1,
@@ -38,10 +38,6 @@
 						//duration: 1000
 					}
                 },
-				
-				subtitle: {
-					text: 'To do: set scale before prerender'
-				},
 				
 				xAxis: {
 					title: {
