--- a/studies/resize.htm
+++ b/studies/resize.htm
@@ -14,7 +14,7 @@
     <script type='text/javascript'>
     	function getRandomData() {
 			var data = [];
-			for (var i = 0; i < 10; i++) {
+			for (var i = 0; i < 5; i++) {
 				data.push(Math.random());
 			}
 			return data;
@@ -26,10 +26,10 @@
             chart = new Highcharts.Chart({
                 chart: {
                     renderTo: 'container',
-					defaultSeriesType: 'pie',
+					defaultSeriesType: 'line',
 					borderWidth: 1,
 					backgroundColor: '#FFFFEF',
-					plotBorderWidth: 1,
+					plotBorderWidth: 0,
 					marginTop: 10,
 					marginRight: 10,
 					marginBottom: 10,
@@ -43,35 +43,32 @@
 					title: {
 						text: 'X axis'
 					},
-					minPadding: 0,
-					maxPadding: 0
+					categories: ['Ein', 'Tvo', 'Tri','Fir']
 				},
 				
-				yAxis: [{
+				yAxis: {
 					title: {
 						text: 'Primary'
-					}
-				}/*, {
-					title: {
-						text: 'Secondary'
-					},
-					opposite: true
-				}*/],
+					}/*,
+					plotBands: [{
+						from: 2,
+						to: 3,
+						color: 'red'
+					}]*/
+				},
 				
-                series: [/*{
-                    data: getRandomData(),
-					type: 'column',
-					yAxis: 1
-                }, {
-                    data: getRandomData(),
-					type: 'spline'
-                }, */{
-                    data: [1,3,2,4]
+                series: [{
+                    data: getRandomData()//[1,3,2,4]
                 }]
             });
 			
+			$('#shift').click(function(){
+				chart.series[0].addPoint(Math.random(), true, true, true);
+			});
+			
         });
     </script>
+	<button id="shift">Shift</button>
     <div id="container" style="height: 300px; width: 400px">
     </div>
 </body>
