--- a/studies/live-server.htm
+++ b/studies/live-server.htm
@@ -6,7 +6,7 @@
 		
 		
 		<!-- 1. Add these JavaScript inclusions in the head of your page -->
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 		<script type="text/javascript" src="../js/highcharts.src.js"></script>
 		
 		
@@ -79,13 +79,17 @@
 			<p>This is the content of the PHP file, <a href="live-server-data.php">
 				live-server-data.php</a>:</p>
 <pre>&lt;?php 
+// Set the JSON header
+header("Content-type: text/json");
+
 // The x value is the current JavaScript time, which is the Unix time multiplied by 1000.
 $x = time() * 1000;
 // The y value is a random number
 $y = rand(0, 100);
 
-// Return it in the form of a JavaScript array
-echo "[$x, $y]";
+// Create a PHP array and echo it as JSON
+$ret = array($x, $y);
+echo json_encode($ret);
 ?&gt;</pre>
 			
 		</div>
