--- a/fiddles/align-ticks-1/demo.html
+++ b/fiddles/align-ticks-1/demo.html
@@ -1,1 +1,2 @@
+<script type="text/javascript" src="http://highcharts.com/js/testing.js"></script>
 <div id="container" style="height: 400px"></div>
