--- a/studies/ohlc.htm
+++ b/studies/ohlc.htm
@@ -7,8 +7,8 @@
 		
 		<!-- 1. Add these JavaScript inclusions in the head of your page -->
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-		<script type="text/javascript" src="../js/prerelease/highcharts.1.3.src.js"></script>
-		<script type="text/javascript" src="../js/modules/ohlc.js"></script>
+		<script type="text/javascript" src="../js/highcharts.src.js"></script>
+		<script type="text/javascript" src="../js/modules/ohlc.src.js"></script>
 		
 		<!-- 2. Add the JavaScript to initialize the chart on document ready -->
 		<script type="text/javascript">
@@ -35,6 +35,9 @@
 						pointStart: Date.UTC(2010, 0, 1),
 						pointInterval: 24 * 3600 * 1000
 					}
+				},
+				tooltip: {
+					shared: true
 				},
 				legend: {
 					enabled: false
@@ -77,7 +80,7 @@
 [ 5.23 , 5.52 , 4.24 , 5.20 ],
 [ 5.92 , 6.01 , 4.68 , 5.39 ],
 [ 6.16 , 6.52 , 5.30 , 5.96 ],
-[ 6.33 , 6.36 , 5.21 , 5.39 ],
+[ 6.33 , 6.36 , 5.21 , 5.39 ]/*,
 [ 6.46 , 7.03 , 5.94 , 6.89 ],
 [ 7.26 , 7.38 , 6.46 , 7.13 ],
 [ 6.69 , 7.85 , 6.55 , 7.47 ],
@@ -159,7 +162,7 @@
 [ 9.30 , 10.00 , 8.73 , 9.56 ],
 [ 8.86 , 9.40 , 8.54 , 9.10 ],
 [ 8.45 , 9.51 , 8.42 , 9.09 ],
-[ 8.63 , 9.26 , 8.45 , 8.76 ]/*,
+[ 8.63 , 9.26 , 8.45 , 8.76 ],
 [ 8.47 , 9.19 , 7.74 , 8.41 ],
 [ 7.86 , 8.67 , 7.71 , 7.85 ],
 [ 8.08 , 8.58 , 7.55 , 8.21 ],
