--- a/studies/funnel.htm
+++ b/studies/funnel.htm
@@ -4,87 +4,15 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<title>Highcharts Example</title>
 		
-		
-		<!-- 1. Add these JavaScript inclusions in the head of your page -->
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-		<script type="text/javascript" src="../js/highcharts.src.js"></script>
-		<script type="text/javascript" src="../js/modules/funnel.src.js"></script>
-		<script type="text/javascript" src="../js/modules/exporting.js"></script>
-		<!--[if IE]>
-			<script type="text/javascript" src="../js/excanvas.compiled.js"></script>
-		<![endif]-->
-		
-		
-		<!-- 2. Add the JavaScript to initialize the chart on document ready -->
 		<script type="text/javascript">
 			
-		var chart;
-		var options = {
-				chart: {
-					renderTo: 'container',
-					defaultSeriesType: 'funnel',
-					margin: [50, 200, 60, 170],
-					borderWidth: 1
-				},
-				title: {
-					text: 'Sales funnel'
-				},
-				plotArea: {
-					shadow: null,
-					borderWidth: null,
-					backgroundColor: null
-				},
-				tooltip: {
-					formatter: function() {
-						return '<b>'+ this.point.name +'</b>: '+ Highcharts.numberFormat(this.y, 0);
-					}
-				},
-				plotOptions: {
-					series: {
-						dataLabels: {
-							align: 'left',
-							x: -300,
-							enabled: true,
-							formatter: function() {
-								return '<b>'+ this.point.name +'</b> ('+ Highcharts.numberFormat(this.point.y, 0) +')';
-							},
-							color: 'black'
-						}
-					}
-				},
-				legend: {
-					enabled: false
-				},
-			    series: [{
-					name: 'Browser share',
-					data: [
-						['Website visits',   15654],
-						['Downloads',       4064],
-						['Requested price list', 1987],
-						['Invoice sent',    976],
-						['Finalized',    846]
-					]
-					//data: [3.40, 1.05, 2.90, 1.65, 1.35, 2.59, 1.39, 3.07, 2.82]
-				}]
-			};
-		
-		
-		$(document).ready(function() {
-			chart = new Highcharts.Chart(options);
-		});
-		
-
-		
+		location.href = "http://jsfiddle.net/highcharts/JvY4s/";		
 		
 		</script>
 		
 	
 </head>
 	<body>
-		
-		<!-- 3. Add the container -->
-		<div id="container" style="width: 800px; height: 400px; margin: 0 auto; "></div>
-		
 				
 	</body>
 </html>
