Some fixes to the OHLC beta

--- a/studies/ohlc.htm
+++ b/studies/ohlc.htm
@@ -3,12 +3,13 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<title>Highcharts Example</title>
-		
+		<base href="https://github.com/highslide-software/highcharts.com/raw/master/" />
 		
 		<!-- 1. Add these JavaScript inclusions in the head of your page -->
-		<script type="text/javascript" src="../js/jquery.js"></script>
-		<script type="text/javascript" src="../js/highcharts.src.js"></script>
-		<script type="text/javascript" src="../js/modules/ohlc.src.js"></script>
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
+		<script type="text/javascript" src="js/highcharts.src.js"></script>
+		<script type="text/javascript" src="js/modules/ohlc.src.js"></script>
+		<script type="text/javascript" src="js/modules/exporting.src.js"></script>
 		
 		<!-- 2. Add the JavaScript to initialize the chart on document ready -->
 		<script type="text/javascript">
