Changes to demos

--- a/samples/index.htm
+++ b/samples/index.htm
@@ -4,7 +4,7 @@
 	</head>	
 
 	<frameset cols="300, *">
-		<frame src="contents.php">
+		<frame src="contents.php" name="contents">
 		<frame serc="view.php" name="main">
 	</frameset>
 
