--- a/samples/stock/demo/lazy-loading/demo.html
+++ b/samples/stock/demo/lazy-loading/demo.html
@@ -2,7 +2,7 @@
 
 <div id="container" style="height: 500px"></div>
 
-<div>In this example Highcharts' data grouping is turned off. Instead, new data 
+<div class="info">In this example Highcharts' data grouping is turned off. Instead, new data 
 	with a suitable resolution is loaded from the server every time the
 	extremes of the x axis change.</div>
 
