--- a/samples/stock/demo/basic-line/demo.html
+++ b/samples/stock/demo/basic-line/demo.html
@@ -1,3 +1,3 @@
-<script type="text/javascript" src="http://www.highcharts.com/js/testing-stock-exporting.js"></script>
+<script src="http://code.highcharts.com/js/stock/highstock.js"></script><script src="http://code.highcharts.com/js/stock/modules/exporting.js"></script>
 
 <div id="container" style="height: 500px; min-width: 500px"></div>
