--- a/samples/stock/rangeselector/inputboxstyle/demo.html
+++ b/samples/stock/rangeselector/inputboxstyle/demo.html
@@ -2,5 +2,5 @@
 
 <div class="info">Example of moving the input boxes away from the print and export buttons.</div>
 
-<script type="text/javascript" src="http://www.highcharts.com/js/testing-stock-exporting.js"></script>
+<script src="http://code.highcharts.com/js/stock/highstock.js"></script><script src="http://code.highcharts.com/js/stock/modules/exporting.js"></script>
 <script type="text/javascript" src="http://www.highcharts.com/samples/data/usdeur.js"></script>
