--- a/samples/stock/members/chart-print/demo.html
+++ b/samples/stock/members/chart-print/demo.html
@@ -2,5 +2,5 @@
 
 <button id="button">Print chart</button>
 
-<script src="http://code.highcharts.com/js/stock/highstock.js"></script><script src="http://code.highcharts.com/js/stock/modules/exporting.js"></script>
+<script src="http://code.highcharts.com/stock/highstock.js"></script><script src="http://code.highcharts.com/stock/modules/exporting.js"></script>
 <script type="text/javascript" src="http://www.highcharts.com/samples/data/usdeur.js"></script>
