Prepared polar demos

--- a/samples/highcharts/demo/index.htm
+++ b/samples/highcharts/demo/index.htm
@@ -71,8 +71,9 @@
 			<li><a href="examples/gauge-vu-meter/index.htm">VU meter</a></li>
 			<li><a href="examples/arearange/index.htm">Area range</a></li>
 			<li><a href="examples/columnrange/index.htm">Column range</a></li>
-			<li><a href="examples/polar-line/index.htm">Polar line</a></li>
-			<li><a href="examples/polar-column/index.htm">Polar column</a></li>
+			<li><a href="examples/polar/index.htm">Polar chart</a></li>
+			<li><a href="examples/polar-spider/index.htm">Spiderweb</a></li>
+			<li><a href="examples/polar-wind-rose/index.htm">Wind rose</a></li>
 		</ul>
 	</body>
 </html>
