--- a/samples/highcharts/demo/polar-wind-rose/demo.html
+++ b/samples/highcharts/demo/polar-wind-rose/demo.html
@@ -1,6 +1,6 @@
 <script src="http://code.highcharts.com/highcharts.js"></script>
 <script src="http://code.highcharts.com/highcharts-more.js"></script>
-<script src="http://dev.highcharts.com/js/modules/data.src.js"></script>
+<script src="http://code.highcharts.com/modules/data.js"></script>
 <script src="http://code.highcharts.com/modules/exporting.js"></script>
 
 <div id="container" style="width: 600px; height: 400px; margin: 0 auto"></div>
