--- a/samples/highcharts/demo/gauge-vu-meter/demo.html
+++ b/samples/highcharts/demo/gauge-vu-meter/demo.html
@@ -1,5 +1,5 @@
-<script src="http://code.highcharts.com/highcharts.js"></script>
-<script src="http://code.highcharts.com/highcharts-more.js"></script>
-<script src="http://code.highcharts.com/modules/exporting.js"></script>
+<script src="http://code.highcharts.com/radial/highcharts.js"></script>
+<script src="http://code.highcharts.com/radial/highcharts-more.js"></script>
+<script src="http://code.highcharts.com/radial/modules/exporting.js"></script>
 
 <div id="container" style="width: 600px; height: 300px; margin: 0 auto"></div>
