--- a/samples/highcharts/demo/polar-wind-rose/demo.html
+++ b/samples/highcharts/demo/polar-wind-rose/demo.html
@@ -1,7 +1,7 @@
-<script src="http://code.highcharts.com/highcharts.js"></script>
-<script src="http://code.highcharts.com/highcharts-more.js"></script>
-<script src="http://code.highcharts.com/modules/data.js"></script>
-<script src="http://code.highcharts.com/modules/exporting.js"></script>
+<script src="http://code.highcharts.com/radial/highcharts.js"></script>
+<script src="http://code.highcharts.com/radial/highcharts-more.js"></script>
+<script src="http://code.highcharts.com/radial/modules/data.js"></script>
+<script src="http://code.highcharts.com/radial/modules/exporting.js"></script>
 
 <div id="container" style="width: 600px; height: 400px; margin: 0 auto"></div>
 
@@ -23,26 +23,26 @@
 			<th class="freq">Total</th>
 		</tr>
 		<tr nowrap>
-			<td class="dir">E</td>
-			<td class="data">0.62</td>
-			<td class="data">2.20</td>
-			<td class="data">0.49</td>
+			<td class="dir">N</td>
+			<td class="data">1.81</td>
+			<td class="data">1.78</td>
+			<td class="data">0.16</td>
 			<td class="data">0.00</td>
 			<td class="data">0.00</td>
 			<td class="data">0.00</td>
 			<td class="data">0.00</td>
-			<td class="data">3.32</td>
-		</tr>
+			<td class="data">3.75</td>
+		</tr>		
 		<tr nowrap bgcolor="#DDDDDD">
-			<td class="dir">ENE</td>
-			<td class="data">0.59</td>
-			<td class="data">1.22</td>
-			<td class="data">0.07</td>
+			<td class="dir">NNE</td>
+			<td class="data">0.62</td>
+			<td class="data">1.09</td>
 			<td class="data">0.00</td>
 			<td class="data">0.00</td>
 			<td class="data">0.00</td>
 			<td class="data">0.00</td>
-			<td class="data">1.88</td>
+			<td class="data">0.00</td>
+			<td class="data">1.71</td>
 		</tr>
 		<tr nowrap>
 			<td class="dir">NE</td>
@@ -56,125 +56,37 @@
 			<td class="data">1.71</td>
 		</tr>
 		<tr nowrap bgcolor="#DDDDDD">
-			<td class="dir">NNE</td>
-			<td class="data">0.62</td>
-			<td class="data">1.09</td>
-			<td class="data">0.00</td>
-			<td class="data">0.00</td>
-			<td class="data">0.00</td>
-			<td class="data">0.00</td>
-			<td class="data">0.00</td>
-			<td class="data">1.71</td>
-		</tr>
-		<tr nowrap>
-			<td class="dir">N</td>
-			<td class="data">1.81</td>
-			<td class="data">1.78</td>
-			<td class="data">0.16</td>
-			<td class="data">0.00</td>
-			<td class="data">0.00</td>
-			<td class="data">0.00</td>
-			<td class="data">0.00</td>
-			<td class="data">3.75</td>
-		</tr>
-		<tr nowrap bgcolor="#DDDDDD">
-			<td class="dir">NNW</td>
-			<td class="data">1.51</td>
-			<td class="data">5.00</td>
-			<td class="data">1.32</td>
-			<td class="data">0.13</td>
-			<td class="data">0.23</td>
-			<td class="data">0.13</td>
-			<td class="data">0.07</td>
-			<td class="data">8.39</td>
-		</tr>
-		<tr nowrap>
-			<td class="dir">NW</td>
-			<td class="data">1.58</td>
-			<td class="data">4.28</td>
-			<td class="data">1.28</td>
-			<td class="data">0.76</td>
-			<td class="data">0.66</td>
-			<td class="data">0.69</td>
-			<td class="data">0.03</td>
-			<td class="data">9.28</td>
-		</tr>
-		<tr nowrap bgcolor="#DDDDDD">
-			<td class="dir">WNW</td>
-			<td class="data">1.32</td>
-			<td class="data">2.40</td>
-			<td class="data">0.99</td>
-			<td class="data">1.61</td>
-			<td class="data">0.33</td>
-			<td class="data">0.00</td>
-			<td class="data">0.00</td>
-			<td class="data">6.64</td>
-		</tr>
-		<tr nowrap>
-			<td class="dir">W</td>
-			<td class="data">1.64</td>
-			<td class="data">1.71</td>
-			<td class="data">0.92</td>
-			<td class="data">1.45</td>
-			<td class="data">0.26</td>
-			<td class="data">0.10</td>
-			<td class="data">0.00</td>
-			<td class="data">6.09</td>
-		</tr>
-		<tr nowrap bgcolor="#DDDDDD">
-			<td class="dir">WSW</td>
-			<td class="data">1.97</td>
-			<td class="data">2.66</td>
-			<td class="data">1.97</td>
-			<td class="data">0.79</td>
-			<td class="data">0.30</td>
-			<td class="data">0.00</td>
-			<td class="data">0.00</td>
-			<td class="data">7.70</td>
-		</tr>
-		<tr nowrap>
-			<td class="dir">SW</td>
-			<td class="data">2.53</td>
-			<td class="data">4.01</td>
+			<td class="dir">ENE</td>
+			<td class="data">0.59</td>
 			<td class="data">1.22</td>
+			<td class="data">0.07</td>
+			<td class="data">0.00</td>
+			<td class="data">0.00</td>
+			<td class="data">0.00</td>
+			<td class="data">0.00</td>
+			<td class="data">1.88</td>
+		</tr>
+		<tr nowrap>
+			<td class="dir">E</td>
+			<td class="data">0.62</td>
+			<td class="data">2.20</td>
 			<td class="data">0.49</td>
+			<td class="data">0.00</td>
+			<td class="data">0.00</td>
+			<td class="data">0.00</td>
+			<td class="data">0.00</td>
+			<td class="data">3.32</td>
+		</tr>
+		<tr nowrap bgcolor="#DDDDDD">
+			<td class="dir">ESE</td>
+			<td class="data">1.22</td>
+			<td class="data">2.01</td>
+			<td class="data">1.55</td>
+			<td class="data">0.30</td>
 			<td class="data">0.13</td>
 			<td class="data">0.00</td>
 			<td class="data">0.00</td>
-			<td class="data">8.39</td>
-		</tr>
-		<tr nowrap bgcolor="#DDDDDD">
-			<td class="dir">SSW</td>
-			<td class="data">2.96</td>
-			<td class="data">4.14</td>
-			<td class="data">0.26</td>
-			<td class="data">0.00</td>
-			<td class="data">0.00</td>
-			<td class="data">0.00</td>
-			<td class="data">0.00</td>
-			<td class="data">7.37</td>
-		</tr>
-		<tr nowrap>
-			<td class="dir">S</td>
-			<td class="data">2.66</td>
-			<td class="data">4.74</td>
-			<td class="data">0.43</td>
-			<td class="data">0.00</td>
-			<td class="data">0.00</td>
-			<td class="data">0.00</td>
-			<td class="data">0.00</td>
-			<td class="data">7.83</td>
-		</tr>
-		<tr nowrap bgcolor="#DDDDDD">
-			<td class="dir">SSE</td>
-			<td class="data">2.04</td>
-			<td class="data">3.42</td>
-			<td class="data">1.97</td>
-			<td class="data">0.86</td>
-			<td class="data">0.53</td>
-			<td class="data">0.49</td>
-			<td class="data">0.00</td>
-			<td class="data">9.31</td>
+			<td class="data">5.20</td>
 		</tr>
 		<tr nowrap>
 			<td class="dir">SE</td>
@@ -188,15 +100,103 @@
 			<td class="data">11.45</td>
 		</tr>
 		<tr nowrap bgcolor="#DDDDDD">
-			<td class="dir">ESE</td>
+			<td class="dir">SSE</td>
+			<td class="data">2.04</td>
+			<td class="data">3.42</td>
+			<td class="data">1.97</td>
+			<td class="data">0.86</td>
+			<td class="data">0.53</td>
+			<td class="data">0.49</td>
+			<td class="data">0.00</td>
+			<td class="data">9.31</td>
+		</tr>
+		<tr nowrap>
+			<td class="dir">S</td>
+			<td class="data">2.66</td>
+			<td class="data">4.74</td>
+			<td class="data">0.43</td>
+			<td class="data">0.00</td>
+			<td class="data">0.00</td>
+			<td class="data">0.00</td>
+			<td class="data">0.00</td>
+			<td class="data">7.83</td>
+		</tr>
+		<tr nowrap bgcolor="#DDDDDD">
+			<td class="dir">SSW</td>
+			<td class="data">2.96</td>
+			<td class="data">4.14</td>
+			<td class="data">0.26</td>
+			<td class="data">0.00</td>
+			<td class="data">0.00</td>
+			<td class="data">0.00</td>
+			<td class="data">0.00</td>
+			<td class="data">7.37</td>
+		</tr>
+		<tr nowrap>
+			<td class="dir">SW</td>
+			<td class="data">2.53</td>
+			<td class="data">4.01</td>
 			<td class="data">1.22</td>
-			<td class="data">2.01</td>
-			<td class="data">1.55</td>
-			<td class="data">0.30</td>
+			<td class="data">0.49</td>
 			<td class="data">0.13</td>
 			<td class="data">0.00</td>
 			<td class="data">0.00</td>
-			<td class="data">5.20</td>
+			<td class="data">8.39</td>
+		</tr>
+		<tr nowrap bgcolor="#DDDDDD">
+			<td class="dir">WSW</td>
+			<td class="data">1.97</td>
+			<td class="data">2.66</td>
+			<td class="data">1.97</td>
+			<td class="data">0.79</td>
+			<td class="data">0.30</td>
+			<td class="data">0.00</td>
+			<td class="data">0.00</td>
+			<td class="data">7.70</td>
+		</tr>
+		<tr nowrap>
+			<td class="dir">W</td>
+			<td class="data">1.64</td>
+			<td class="data">1.71</td>
+			<td class="data">0.92</td>
+			<td class="data">1.45</td>
+			<td class="data">0.26</td>
+			<td class="data">0.10</td>
+			<td class="data">0.00</td>
+			<td class="data">6.09</td>
+		</tr>
+		<tr nowrap bgcolor="#DDDDDD">
+			<td class="dir">WNW</td>
+			<td class="data">1.32</td>
+			<td class="data">2.40</td>
+			<td class="data">0.99</td>
+			<td class="data">1.61</td>
+			<td class="data">0.33</td>
+			<td class="data">0.00</td>
+			<td class="data">0.00</td>
+			<td class="data">6.64</td>
+		</tr>
+		<tr nowrap>
+			<td class="dir">NW</td>
+			<td class="data">1.58</td>
+			<td class="data">4.28</td>
+			<td class="data">1.28</td>
+			<td class="data">0.76</td>
+			<td class="data">0.66</td>
+			<td class="data">0.69</td>
+			<td class="data">0.03</td>
+			<td class="data">9.28</td>
+		</tr>		
+		<tr nowrap bgcolor="#DDDDDD">
+			<td class="dir">NNW</td>
+			<td class="data">1.51</td>
+			<td class="data">5.00</td>
+			<td class="data">1.32</td>
+			<td class="data">0.13</td>
+			<td class="data">0.23</td>
+			<td class="data">0.13</td>
+			<td class="data">0.07</td>
+			<td class="data">8.39</td>
 		</tr>
 		<tr nowrap>
 			<td class="totals">Total</td>
