--- a/samples/highcharts/demo/gauge-clock/demo.html
+++ b/samples/highcharts/demo/gauge-clock/demo.html
@@ -1,4 +1,4 @@
-<script src="http://code.highcharts.com/radial/highcharts.js"></script>
-<script src="http://code.highcharts.com/radial/highcharts-more.js"></script>
+<script src="http://code.highcharts.com/v2.3Beta/highcharts.js"></script>
+<script src="http://code.highcharts.com/v2.3Beta/highcharts-more.js"></script>
 
 <div id="container" style="width: 300px; height: 300px; margin: 0 auto"></div>
