--- a/samples/highcharts/demo/polar-spider/demo.html
+++ b/samples/highcharts/demo/polar-spider/demo.html
@@ -1,5 +1,5 @@
-<script src="http://code.highcharts.com/v2.3Beta/highcharts.js"></script>
-<script src="http://code.highcharts.com/v2.3Beta/highcharts-more.js"></script>
-<script src="http://code.highcharts.com/v2.3Beta/modules/exporting.js"></script>
+<script src="http://code.highcharts.com/radial/highcharts.js"></script>
+<script src="http://code.highcharts.com/radial/highcharts-more.js"></script>
+<script src="http://code.highcharts.com/radial/modules/exporting.js"></script>
 
 <div id="container" style="width: 700px; height: 400px; margin: 0 auto"></div>
