--- a/samples/highcharts/demo/columnrange/demo.html
+++ b/samples/highcharts/demo/columnrange/demo.html
@@ -1,5 +1,5 @@
-<script src="http://code.highcharts.com/radial/highcharts.js"></script>
-<script src="http://code.highcharts.com/radial/highcharts-more.js"></script>
-<script src="http://code.highcharts.com/radial/modules/exporting.js"></script>
+<script src="http://code.highcharts.com/highcharts.js"></script>
+<script src="http://code.highcharts.com/highcharts-more.js"></script>
+<script src="http://code.highcharts.com/modules/exporting.js"></script>
 
 <div id="container" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
