--- a/samples/highcharts/demo/polar-wind-rose/demo.html
+++ b/samples/highcharts/demo/polar-wind-rose/demo.html
@@ -1,7 +1,7 @@
-<script src="http://code.highcharts.com/radial/highcharts.js"></script>
-<script src="http://code.highcharts.com/radial/highcharts-more.js"></script>
-<script src="http://code.highcharts.com/radial/modules/data.js"></script>
-<script src="http://code.highcharts.com/radial/modules/exporting.js"></script>
+<script src="http://code.highcharts.com/highcharts.js"></script>
+<script src="http://code.highcharts.com/highcharts-more.js"></script>
+<script src="http://code.highcharts.com/modules/data.js"></script>
+<script src="http://code.highcharts.com/modules/exporting.js"></script>
 
 <div id="container" style="width: 600px; height: 400px; margin: 0 auto"></div>
 
