Added data grouping for ranges in Highstock. Added demos.

--- a/samples/stock/demo/index.htm
+++ b/samples/stock/demo/index.htm
@@ -23,10 +23,13 @@
 			<li><a href="examples/spline/index.htm"> Spline</a></li>
 			<li><a href="examples/step-line/index.htm"> Step line</a></li>
 			<li><a href="examples/area/index.htm"> Area</a></li>
-			<li><a href="examples/areaspline/index.htm"> Areaspline</a></li>
+			<li><a href="examples/areaspline/index.htm"> Area spline</a></li>
+			<li><a href="examples/arearange/index.htm"> Area range</a></li>
+			<li><a href="examples/areasplinerange/index.htm"> Area spline range</a></li>
 			<li><a href="examples/candlestick/index.htm"> Candlestick</a></li>
 			<li><a href="examples/ohlc/index.htm"> OHLC</a></li>
 			<li><a href="examples/column/index.htm"> Column</a></li>
+			<li><a href="examples/columnrange/index.htm"> Column range</a></li>
 			<li><a href="examples/markers-only/index.htm"> Point markers only</a></li>
 		</ul>
 		<h4>Various features</h4>
