Fixed missing legend colors in map.

--- a/studies/world-map.htm
+++ b/studies/world-map.htm
@@ -6,11 +6,16 @@
 		<!-- 1. Add these JavaScript inclusions in the head of your page -->
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		
+		
 		<script type="text/javascript" src="https://raw.github.com/highslide-software/highcharts.com/master/js/highcharts.src.js"></script>
 		<script type="text/javascript" src="https://raw.github.com/highslide-software/highcharts.com/master/js/modules/map.src.js"></script>
 		<script type="text/javascript" src="https://raw.github.com/highslide-software/highcharts.com/master/js/modules/googlespreadsheet.src.js"></script>
 		
-		
+		<!--
+		<script type="text/javascript" src="http://code.highcharts.com/dev/highcharts.src.js"></script>
+		<script type="text/javascript" src="http://code.highcharts.com/dev/modules/map.src.js"></script>
+		<script type="text/javascript" src="http://code.highcharts.com/dev/modules/googlespreadsheet.src.js"></script>
+		-->
 		
 		<!-- 2. Insert the shapes -->
 		<script type="text/javascript" src="world-map-shapes.js"></script>
@@ -47,7 +52,7 @@
 							},
 							
 							subtitle: {
-								text: 'Please excuse the creative projection - this is a work in progress'
+								text: 'This is a work in progress'
 							},
 							
 							legend: {
@@ -128,6 +133,6 @@
 	</head>
 	<body>
 		<!-- 3. Add the container -->
-		<div id="container" style="width: 600px; height: 550px; margin: 0 auto"></div>
+		<div id="container" style="width: 800px; height: 500px; margin: 0 auto"></div>
 	</body>
 </html>
