--- a/studies/world-map.htm
+++ b/studies/world-map.htm
@@ -6,16 +6,9 @@
 		<!-- 1. Add these JavaScript inclusions in the head of your page -->
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		
-		
-		<script type="text/javascript" src="https://raw.github.com/highslide-software/highcharts.com/master/js/highcharts.src.js"></script>
-		<script type="text/javascript" src="https://raw.github.com/highslide-software/highcharts.com/master/js/modules/map.src.js"></script>
-		<script type="text/javascript" src="https://raw.github.com/highslide-software/highcharts.com/master/js/modules/googlespreadsheet.src.js"></script>
-		
-		<!--
-		<script type="text/javascript" src="http://code.highcharts.com/dev/highcharts.src.js"></script>
-		<script type="text/javascript" src="http://code.highcharts.com/dev/modules/map.src.js"></script>
-		<script type="text/javascript" src="http://code.highcharts.com/dev/modules/googlespreadsheet.src.js"></script>
-		-->
+		<script type="text/javascript" src="http://code.highcharts.com/master/highcharts.src.js"></script>
+		<script type="text/javascript" src="http://code.highcharts.com/master/modules/map.src.js"></script>
+		<script type="text/javascript" src="http://code.highcharts.com/master/modules/googlespreadsheet.src.js"></script>
 		
 		<!-- 2. Insert the shapes -->
 		<script type="text/javascript" src="world-map-shapes.js"></script>
@@ -110,7 +103,7 @@
 		
 							if (shapes[countryCodes[i]]) {
 								options.series[0].data.push({
-									y : populationDensities[i],
+									y : parseFloat(populationDensities[i]),
 									name : countryNames[i],
 									path : Highcharts.pathToArray(shapes[countryCodes[i]]),
 									states: {
