--- a/samples/highcharts/demo/index.htm
+++ b/samples/highcharts/demo/index.htm
@@ -74,6 +74,7 @@
 			<li><a href="examples/polar/index.htm">Polar chart</a></li>
 			<li><a href="examples/polar-spider/index.htm">Spiderweb</a></li>
 			<li><a href="examples/polar-wind-rose/index.htm">Wind rose</a></li>
+			<li><a href="examples/box-plot/index.htm">Box plot</a></li>
 		</ul>
 	</body>
 </html>
