Fixed a couple of VML related issues for maps.

--- a/studies/map-from-svg.htm
+++ b/studies/map-from-svg.htm
@@ -116,7 +116,7 @@
 									},
 									states: {
 										hover: {
-											color: 'orange'
+											color: '#FF7F00' // orange
 										}
 									}
 								}
