Updated paths in maps

--- a/studies/world-map.htm
+++ b/studies/world-map.htm
@@ -6,9 +6,9 @@
 		<!-- 1. Add these JavaScript inclusions in the head of your page -->
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		
-		<script type="text/javascript" src="http://code.highcharts.com/dev/highcharts.src.js"></script>
-		<script type="text/javascript" src="http://code.highcharts.com/dev/modules/map.src.js"></script>
-		<script type="text/javascript" src="http://code.highcharts.com/dev/modules/googlespreadsheet.src.js"></script>
+		<script type="text/javascript" src="http://github.highcharts.com/rambera/highcharts.src.js"></script>
+		<script type="text/javascript" src="http://github.highcharts.com/rambera/modules/map.src.js"></script>
+		<script type="text/javascript" src="http://github.highcharts.com/rambera/modules/googlespreadsheet.src.js"></script>
 		
 		<!-- 2. Insert the shapes -->
 		<script type="text/javascript" src="world-map-shapes.js"></script>
