Fixed Highstock issue with zoomed range increasing when moving the range without resizing it. Closes #1370.

--- a/studies/meteogram-sprites.htm
+++ b/studies/meteogram-sprites.htm
@@ -6,7 +6,7 @@
         <!-- 1. Add these JavaScript inclusions in the head of your page -->
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js">
         </script>
-        <script type="text/javascript" src="http://code.highcharts.com/master/highcharts.js">
+        <script type="text/javascript" src="http://github.highcharts.com/master/highcharts.js">
         </script>
         <!-- 2. Add the JavaScript to initialize the chart on document ready -->
         <script type="text/javascript">
