First commit of Axis.update()

--- a/samples/highcharts/members/series-update/demo.html
+++ b/samples/highcharts/members/series-update/demo.html
@@ -5,6 +5,7 @@
 <button id="name">Toggle name</button>
 <button id="data-labels">Toggle data labels</button>
 <button id="markers">Toggle point markers</button>
+<button id="color">Toggle color</button>
 
 <button id="line" style="margin-left: 2em">Line</button>
 <button id="spline">Spline</button>
