--- a/samples/highcharts/members/series-update/demo.html
+++ b/samples/highcharts/members/series-update/demo.html
@@ -8,6 +8,7 @@
 <button id="color">Toggle color</button>
 
 <button id="line" style="margin-left: 2em">Line</button>
+<button id="column">Column</button>
 <button id="spline">Spline</button>
 <button id="area">Area</button>
 <button id="areaspline">Areaspline</button>
