Worked on Axis.update()

--- a/studies/map-from-svg.htm
+++ b/studies/map-from-svg.htm
@@ -8,9 +8,9 @@
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
 		<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" />
 		
-		<script type="text/javascript" src="http://github.highcharts.com/rambera/highcharts.src.js"></script>
-		<script type="text/javascript" src="http://github.highcharts.com/rambera/modules/map.src.js"></script>
-		<script type="text/javascript" src="http://github.highcharts.com/rambera/modules/data.src.js"></script>
+		<script type="text/javascript" src="http://github.highcharts.com/c07441d/highcharts.src.js"></script>
+		<script type="text/javascript" src="http://github.highcharts.com/c07441d/modules/map.src.js"></script>
+		<script type="text/javascript" src="http://github.highcharts.com/c07441d/modules/data.src.js"></script>
 		
 		
 		
