Started documenting box plot.

--- a/whats-new.htm
+++ b/whats-new.htm
@@ -36,3 +36,13 @@ See <a href="http://www.highcharts.com/sample/plotoptions/bubble-radialgradient/
 <p>By default, data labels for bubble series are placed on top of the bubbles by setting the <code>align</code> option to <code>"center"</code>, <code>verticalAlign</code> to <code>"middle"</code>
 	and <code>inside</code> to <code>true</code>. In the <code>dataLabels.style</code> option, the labels are given a default color of "white", and in modern browsers a black text shadow to make it stand out from the background. See <a href="http://www.highcharts.com/sample/plotoptions/bubble-datalabels/">bubble data labels</a> demonstrated.</p>
 
+
+
+
+
+<h2>Box plot series</h2>
+
+<p>A box plot is a convenient way of depicting groups of data through their five-number summaries: the smallest observation (sample minimum), lower quartile (Q1), median (Q2), upper quartile (Q3), and largest observation (sample maximum). Combined with a scatter series, the box plot may also indicate which observations, if any, might be considered outliers.</p>
+
+
+
