--- a/whats-new.htm
+++ b/whats-new.htm
@@ -42,7 +42,8 @@ See <a href="http://www.highcharts.com/sample/plotoptions/bubble-radialgradient/
 
 <h2>Box plot series</h2>
 
-<p>A box plot is a convenient way of depicting groups of data through their five-number summaries: the smallest observation (sample minimum), lower quartile (Q1), median (Q2), upper quartile (Q3), and largest observation (sample maximum). Combined with a scatter series, the box plot may also indicate which observations, if any, might be considered outliers.</p>
+See docs
+
 
 
 
