--- a/samples/highcharts/demo/index.htm
+++ b/samples/highcharts/demo/index.htm
@@ -75,6 +75,7 @@
 			<li><a href="examples/polar-spider/index.htm">Spiderweb</a></li>
 			<li><a href="examples/polar-wind-rose/index.htm">Wind rose</a></li>
 			<li><a href="examples/box-plot/index.htm">Box plot</a></li>
+			<li><a href="examples/error-bar/index.htm">Error bar</a></li>
 		</ul>
 	</body>
 </html>
