--- a/samples/highcharts/demo/bubble/demo.html
+++ b/samples/highcharts/demo/bubble/demo.html
@@ -1,8 +1,5 @@
-<!--
-<script src="http://code.highcharts.com/dev/highcharts.js"></script>
-<script src="http://code.highcharts.com/dev/highcharts-more.js"></script>
-<script src="http://code.highcharts.com/dev/modules/exporting.js"></script>
--->
-<script src="http://dev.highcharts.com/js/testing.js"></script>
-<script src="http://dev.highcharts.com/js/highcharts-more.js"></script>
+<script src="http://code.highcharts.com/highcharts.js"></script>
+<script src="http://code.highcharts.com/highcharts-more.js"></script>
+<script src="http://code.highcharts.com/modules/exporting.js"></script>
+
 <div id="container" style="height: 400px; width: 600px; margin: 0 auto"></div>
