Fixed regressions in old IE, where mouse tracking didn't work on bar chart because inverted divs were blocking underlying content.

--- a/samples-v3/index.htm
+++ b/samples-v3/index.htm
@@ -6,7 +6,7 @@
 
 	<frameset cols="300, *">
 		<frame src="contents.php" name="contents">
-		<frame serc="view.php" name="main">
+		<frame serc="view.php" name="main" id="main">
 	</frameset>
 
 </html>
