--- Highcharts 3.0.0 / Highstock 1.3.0 official release ---

--- a/samples/highcharts/demo/index.htm
+++ b/samples/highcharts/demo/index.htm
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<h1>Highcharts Examples</h1>
-		<h4>Line and scatter charts</h4>
+		<h4>Line charts</h4>
 		<ul>
 			<li><a href="examples/line-basic/index.htm">Basic line</a></li>
 			<li><a href="examples/line-ajax/index.htm">Ajax loaded data, clickable points</a></li>
@@ -53,6 +53,7 @@
 		<ul>
 			<li><a href="examples/scatter/index.htm">Scatter plot</a></li>
 			<li><a href="examples/bubble/index.htm">Bubble chart</a></li>
+			<li><a href="examples/bubble-3d/index.htm">3D bubbles</a></li>
 		</ul>
 		<h4>Dynamic charts</h4>
 		<ul>
