--- a/samples/highcharts/demo/index.htm
+++ b/samples/highcharts/demo/index.htm
@@ -27,6 +27,8 @@
 			<li><a href="examples/area-missing/index.htm">Area with missing points</a></li>
 			<li><a href="examples/area-inverted/index.htm">Inverted axes</a></li>
 			<li><a href="examples/areaspline/index.htm">Area-spline</a></li>
+			<li><a href="examples/arearange/index.htm">Area range</a></li>
+			<li><a href="examples/arearange-line/index.htm">Area range and line</a></li>
 		</ul>
 		<h4>Column and bar charts</h4>
 		<ul>
@@ -41,6 +43,7 @@
 			<li><a href="examples/column-rotated-labels/index.htm">Column with rotated labels</a></li>
 			<li><a href="examples/column-drilldown/index.htm">Column with drilldown</a></li>
 			<li><a href="examples/column-parsed/index.htm">Data defined in a HTML table</a></li>
+			<li><a href="examples/columnrange/index.htm">Column range</a></li>
 		</ul>
 		<h4>Pie charts</h4>
 		<ul>
@@ -74,8 +77,6 @@
 			<li><a href="examples/gauge-clock/index.htm">Clock</a></li>
 			<li><a href="examples/gauge-dual/index.htm">Gauge with dual axes</a></li>
 			<li><a href="examples/gauge-vu-meter/index.htm">VU meter</a></li>
-			<li><a href="examples/arearange/index.htm">Area range</a></li>
-			<li><a href="examples/columnrange/index.htm">Column range</a></li>
 			<li><a href="examples/polar/index.htm">Polar chart</a></li>
 			<li><a href="examples/polar-spider/index.htm">Spiderweb</a></li>
 			<li><a href="examples/polar-wind-rose/index.htm">Wind rose</a></li>
